update readme for container